--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -16,3 +16,9 @@ body {
     font-family: 'Montserrat', sans-serif;
     margin: 0;
 }
+
+.header {
+    width: 100%;
+    height: 520px;
+    overflow: hidden;
+}
