--- a/css/styles.css
+++ b/css/styles.css
@@ -4,10 +4,50 @@ body {
   margin: 0;
 }
 
+a {
+  text-decoration: none;
+}
+
+a, p, label {
+  color: #232A36;
+}
+
 .header {
   width: 100%;
   height: 520px;
   overflow: hidden;
+}
+
+.wrapper {
+  width: 1520px;
+  margin: auto;
+}
+
+.nav .wrapper, .nav .nav__logo-section a, .nav .list {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  align-items: center;
+}
+.nav .nav__logo-section {
+  width: 365px;
+}
+.nav .nav__logo-section img, .nav .nav__logo-section .department {
+  display: inline-block;
+  margin: 0;
+}
+.nav .nav__logo-section img {
+  width: 200px;
+}
+.nav .list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+.nav .list .link {
+  display: inline-block;
+  padding: 20px;
+  font-weight: 700;
 }
 
 /*# sourceMappingURL=styles.css.map */
