--- a/css/variables.css
+++ b/css/variables.css
@@ -4,10 +4,23 @@ body {
   margin: 0;
 }
 
+a {
+  text-decoration: none;
+}
+
+a, p, label {
+  color: #232A36;
+}
+
 .header {
   width: 100%;
   height: 520px;
   overflow: hidden;
+}
+
+.wrapper {
+  width: 1520px;
+  margin: auto;
 }
 
 /*# sourceMappingURL=variables.css.map */
