--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,2 +1,37 @@
 @import 'mixins';
 @import 'variables';
+
+.nav {
+
+    .wrapper, .nav__logo-section a, .list {
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .nav__logo-section {
+        width: 365px;
+
+        img, .department {
+            display: inline-block;
+            margin: 0;
+        }
+
+        img {
+            width: 200px;
+        }
+    }
+
+    .list {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+
+        .link {
+            display: inline-block;
+            padding: 20px;
+            font-weight: 700;
+        }
+    }
+}
