--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -17,8 +17,21 @@ body {
     margin: 0;
 }
 
+a {
+    text-decoration: none;
+}
+
+a, p, label {
+    color: $primary-dark-color;
+}
+
 .header {
     width: 100%;
     height: 520px;
     overflow: hidden;
+}
+
+.wrapper {
+    width: 1520px;
+    margin: auto;
 }
