--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap');
+@import 'mixins';
 
 $primary-color: #5FE2A8;
 $secondary-color: #48CB90;
