--- a/css/styles.css
+++ b/css/styles.css
@@ -9,13 +9,21 @@ a {
 }
 
 a, p, label {
-  color: #232A36;
+  color: #0A2740;
 }
 
 .header {
+  position: relative;
   width: 100%;
-  height: 520px;
-  overflow: hidden;
+  margin-top: -43px;
+}
+
+.header--small {
+  width: 500px;
+}
+
+.header--big {
+  height: 800px;
 }
 
 .wrapper {
@@ -23,6 +31,10 @@ a, p, label {
   margin: auto;
 }
 
+.nav {
+  position: relative;
+  z-index: 1;
+}
 .nav .wrapper, .nav .nav__logo-section a, .nav .list {
   display: flex;
   flex-flow: row wrap;
@@ -49,6 +61,18 @@ a, p, label {
   display: inline-block;
   padding: 20px;
   font-weight: 700;
+}
+
+.header {
+  background: #eeeeee;
+}
+.header .header__slide-timer {
+  height: 3px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 30%;
+  background: #851DE0;
 }
 
 /*# sourceMappingURL=styles.css.map */
