--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -1,18 +1,17 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap');
 @import 'mixins';
 
-$primary-color: #5FE2A8;
-$secondary-color: #48CB90;
+// Variables
+$main-color: #851DE0;
+$secondary-color: #57078C;
+$third-color: #1C0340;
+$fourth-color: #0A2740;
 
 $white: #ffffff;
-$gray: #F7F7F7;
-$darker-gray: #E6E6E6;
+$gray: #F5F5F5;
+$black: #000000;
 
-$primary-dark-color: #232A36;
-$secondary-dark-color: #1E242E;
-
-$gradient: lenear-gradient(45deg #5C7193, #57B9BA);
-
+// Global tags
 body {
     font-family: 'Montserrat', sans-serif;
     margin: 0;
@@ -23,15 +22,25 @@ a {
 }
 
 a, p, label {
-    color: $primary-dark-color;
+    color: $fourth-color;
 }
 
+// Header
 .header {
+    position: relative;
     width: 100%;
-    height: 520px;
-    overflow: hidden;
+    margin-top: -43px;
 }
 
+.header--small {
+    width: 500px;
+}
+
+.header--big {
+    height: 800px;
+}
+
+// Wrapper
 .wrapper {
     width: 1520px;
     margin: auto;
