--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -45,14 +45,73 @@
 
 // Banner
 .header {
-    background: #eeeeee;
+    background: url('../images/headers/gallery-images/success.jpg');
 
     .header__slide-timer {
-        height: 3px;
+        height: 5px;
         position: absolute;
         top: 0;
         left: 0;
         width: 30%;
         background: $main-color;
+    }
+
+    .header-content {
+        position: absolute;
+        top: 50%;
+        width: 100%;
+        text-align: center;
+        left: 0;
+        transform: translateY(-50%);
+    }
+
+    .slider__arrows {
+        position: absolute;
+        top: 50%;
+        opacity: 0.5;
+        transition: .3s;
+        cursor: pointer;
+
+        &:hover {
+            opacity: 1;
+        }
+    }
+
+    .slider__arrow--left {
+        left: 20px;
+    }
+
+    .slider__arrow--right {
+        right: 20px;
+    }
+
+    .slider-dots {
+        position: absolute;
+        bottom: 20px;
+        left: 50%;
+        transform: translateX(-50%);
+        padding: 7px;
+        background: transparentize($black, .6);
+        display: flex;
+        flex-flow: row wrap;
+        border-radius: 3px;
+
+        .dot {
+            width: 10px;
+            height: 10px;
+            border-radius: 50%;
+            background: $white;
+            opacity: .5;
+            margin: 0 7px;
+            cursor: pointer;
+
+            &.is-active {
+                opacity: 1;
+            }
+
+            &:hover {
+                opacity: 1;
+            }
+        }
     }
 }
