--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -25,11 +25,35 @@ a, p, label {
     color: $fourth-color;
 }
 
+// Components
+.button {
+    background: $main-color;
+    color: $white;
+    font-size: 16px;
+    padding: 18px 32px;
+    display: inline-block;
+    transition: .3s;
+
+    &:hover {
+        background: darken($main-color, 5%);
+    }
+}
+
 // Header
 .header {
     position: relative;
     width: 100%;
-    margin-top: -43px;
+    margin-top: -20px;
+    background-position: center !important;
+    background-size: cover !important;
+    background-repeat: no-repeat !important;
+
+    .page-heading {
+        font-size: 5em;
+        margin: 0;
+        color: $white;
+        text-shadow: 0px 0px 10px transparentize($black, 0.7);
+    }
 }
 
 .header--small {
