--- a/css/variables.css
+++ b/css/variables.css
@@ -12,6 +12,38 @@ a, p, label {
   color: #0A2740;
 }
 
+input, select, button {
+  -webkit-appearance: none;
+  outline-style: none;
+  border: none;
+  border-radius: 0px;
+}
+
+.white-color {
+  color: #ffffff;
+}
+
+.grid {
+  display: grid;
+  gap: 20px;
+}
+
+.grid-2 {
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.flex {
+  display: flex;
+}
+
+.space-around {
+  justify-content: space-around;
+}
+
+.space-between {
+  justify-content: space-between;
+}
+
 .button {
   background: #851DE0;
   color: #ffffff;
