Made some space for the slide functionality in the js file, made the section headings uppercase and changed the first events paragraph

--- a/css/styles.css
+++ b/css/styles.css
@@ -115,6 +115,7 @@ input, select, button {
   margin: 0;
   color: #ffffff;
   text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+  text-transform: uppercase;
 }
 
 .section-heading {
