Completed the courses section

--- a/css/variables.css
+++ b/css/variables.css
@@ -31,6 +31,10 @@ input, select, button {
   color: #ffffff;
 }
 
+.white-bg {
+  background: #ffffff;
+}
+
 .grid {
   display: grid;
   gap: 20px;
@@ -88,9 +92,6 @@ input, select, button {
   position: relative;
   width: 100%;
   margin-top: -20px;
-  background-position: center !important;
-  background-size: cover !important;
-  background-repeat: no-repeat !important;
 }
 
 .header--small {
@@ -99,6 +100,12 @@ input, select, button {
 
 .header--big {
   height: 800px;
+}
+
+.bg-img-properties {
+  background-position: center !important;
+  background-size: cover !important;
+  background-repeat: no-repeat !important;
 }
 
 .wrapper {
@@ -121,6 +128,11 @@ input, select, button {
 .section-heading {
   text-transform: uppercase;
   font-size: 40px;
+}
+
+.third-heading {
+  margin: 5px 0;
+  font-size: 35px;
 }
 
 /*# sourceMappingURL=variables.css.map */
