--- a/css/styles.css
+++ b/css/styles.css
@@ -31,6 +31,10 @@ input, select, button {
   color: #ffffff;
 }
 
+.white-bg {
+  background: #ffffff;
+}
+
 .grid {
   display: grid;
   gap: 20px;
@@ -88,9 +92,6 @@ input, select, button {
   position: relative;
   width: 100%;
   margin-top: -20px;
-  background-position: center !important;
-  background-size: cover !important;
-  background-repeat: no-repeat !important;
 }
 
 .header--small {
@@ -99,6 +100,12 @@ input, select, button {
 
 .header--big {
   height: 800px;
+}
+
+.bg-img-properties {
+  background-position: center !important;
+  background-size: cover !important;
+  background-repeat: no-repeat !important;
 }
 
 .wrapper {
@@ -121,6 +128,11 @@ input, select, button {
 .section-heading {
   text-transform: uppercase;
   font-size: 40px;
+}
+
+.third-heading {
+  margin: 5px 0;
+  font-size: 35px;
 }
 
 .nav {
@@ -285,6 +297,73 @@ input, select, button {
 }
 .events-section .event .event__content .event-content {
   margin: 5px 0;
+}
+
+.course-wrapper {
+  height: 400px;
+  padding: 20px;
+  position: relative;
+  overflow: hidden;
+}
+.course-wrapper.grid-span {
+  grid-column: 1/3;
+}
+.course-wrapper .course__bg-overlay {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.3);
+  transition: 0.3s cubic-bezier(0.58, 0.01, 0.41, 0.99);
+}
+.course-wrapper .course__contents {
+  position: relative;
+  z-index: 1;
+  margin-top: 368px;
+  transition: 0.3s cubic-bezier(0.58, 0.01, 0.41, 0.99);
+}
+.course-wrapper .course__contents .expand-collapse {
+  height: 50px;
+  width: 50px;
+  border: 2px solid #ffffff;
+  border-radius: 50%;
+  position: relative;
+}
+.course-wrapper .course__contents .expand-collapse div {
+  position: absolute;
+  background: #ffffff;
+}
+.course-wrapper .course__contents .expand-collapse .plus {
+  height: 80%;
+  width: 5px;
+}
+.course-wrapper .course__contents .expand-collapse .minus {
+  width: 80%;
+  height: 5px;
+}
+.course-wrapper .course__contents .course__study-levels-wrapper div {
+  margin: 5px 0;
+  padding: 10px;
+  opacity: 0;
+  transition: 0.3s cubic-bezier(0.58, 0.01, 0.41, 0.99);
+}
+.course-wrapper .course__contents .course__study-levels-wrapper div p {
+  margin: 0;
+}
+@media only screen and (min-width: 1500px) {
+  .course-wrapper:hover .course__contents {
+    margin-top: 0;
+  }
+  .course-wrapper:hover .course__contents .course__study-levels-wrapper div {
+    opacity: 1;
+  }
+  .course-wrapper:hover .course__bg-overlay {
+    background: rgba(133, 29, 224, 0.95);
+  }
+  .course-wrapper .expand-collapse {
+    display: none;
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
