--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -85,34 +85,12 @@
         right: 20px;
     }
 
-    .slider-dots {
+    .dots {
         position: absolute;
         bottom: 120px;
         left: 50%;
         transform: translateX(-50%);
-        padding: 7px;
         background: transparentize($black, .5);
-        display: flex;
-        flex-flow: row wrap;
-        border-radius: 3px;
-
-        .dot {
-            width: 10px;
-            height: 10px;
-            border-radius: 50%;
-            background: $white;
-            opacity: .5;
-            margin: 0 7px;
-            cursor: pointer;
-
-            &.is-active {
-                opacity: 1;
-            }
-
-            &:hover {
-                opacity: 1;
-            }
-        }
     }
 
     .form-wrapper {
@@ -164,6 +142,7 @@
 
 // Events Styling
 .events-section {
+
     .event {
         grid-template-columns: 150px 1fr;
 
@@ -201,6 +180,8 @@
             } 
         }
     }
+
+
 }
 
 // Courses styling
@@ -291,4 +272,30 @@
             display: none;
         }
     }
+}
+
+// Testimonial styling
+.testimonials {
+    .testimonial-wrapper {
+        background: $secondary-color;
+        padding: 50px;
+        margin-top: 120px;
+
+        img {
+            width: 200px;
+            border: 12px solid $white;
+            border-radius: 50%;
+            margin-top: -150px;
+        }
+
+        .testimonial__content {
+            max-width: 780px;
+            margin: 0px auto;
+        }
+    }
+}
+
+footer {
+    background: $secondary-color;
+    padding: 20px;
 }
