--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -23,6 +23,7 @@ a {
 
 a, p, label {
     color: $fourth-color;
+    font-size: 16px;
 }
 
 .alt-link {
@@ -64,6 +65,10 @@ input, select, button {
     grid-template-columns: repeat(2, 1fr);
 }
 
+.grid-3 {
+    grid-template-columns: repeat(3, 1fr);
+}
+
 .flex {
     display: flex;
 }
@@ -103,6 +108,34 @@ input, select, button {
 
     &:hover {
         background: darken($main-color, 5%);
+    }
+}
+
+.dots {
+    padding: 7px;
+    display: flex;
+    flex-flow: row wrap;
+    border-radius: 3px;
+    justify-content: space-around;
+    width: 100px;
+    margin: auto;
+
+    .dot {
+        width: 10px;
+        height: 10px;
+        border-radius: 50%;
+        background: $white;
+        opacity: .5;
+        margin: 0 7px;
+        cursor: pointer;
+
+        &.is-active {
+            opacity: 1;
+        }
+
+        &:hover {
+            opacity: 1;
+        }
     }
 }
 
@@ -154,4 +187,13 @@ input, select, button {
 .third-heading {
     margin: 5px 0;
     font-size: 35px;
+}
+
+// Text aligning
+.text-center {
+    text-align: center;
+}
+
+.text-left {
+    text-align: left;
 }
