--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,23 @@ a, p, label {
   font-size: 16px;
 }
 
+.logo-section a {
+  display: flex;
+  flex-flow: row wrap;
+  align-items: center;
+}
+.logo-section img, .logo-section .department {
+  display: inline-block;
+  margin: 0;
+}
+.logo-section img {
+  width: 100px;
+  margin-right: 20px;
+}
+.logo-section .department {
+  font-size: 1.05em;
+}
+
 .alt-link {
   color: #57078C;
   display: inline-block;
@@ -26,6 +43,14 @@ input, select, button {
   outline-style: none;
   border: none;
   border-radius: 0px;
+}
+
+.mt-60 {
+  margin-top: 60px;
+}
+
+.pt-30 {
+  padding-top: 30px;
 }
 
 .white-color {
@@ -51,6 +76,10 @@ input, select, button {
 
 .grid-3 {
   grid-template-columns: repeat(3, 1fr);
+}
+
+.grid-4 {
+  grid-template-columns: repeat(4, 1fr);
 }
 
 .flex {
@@ -125,7 +154,13 @@ input, select, button {
 }
 
 .header--small {
-  width: 500px;
+  height: 500px;
+}
+.header--small .wrapper {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 20px;
 }
 
 .header--big {
@@ -141,6 +176,11 @@ input, select, button {
 .wrapper {
   width: 1520px;
   margin: auto;
+}
+@media only screen and (max-width: 1620px) {
+  .wrapper {
+    width: calc(100% - 100px);
+  }
 }
 
 .section {
@@ -183,17 +223,6 @@ input, select, button {
   justify-content: space-between;
   align-items: center;
 }
-.nav .nav__logo-section img, .nav .nav__logo-section .department {
-  display: inline-block;
-  margin: 0;
-}
-.nav .nav__logo-section img {
-  width: 100px;
-  margin-right: 20px;
-}
-.nav .nav__logo-section .department {
-  font-size: 1.05em;
-}
 .nav .list {
   list-style: none;
   padding: 0;
@@ -205,8 +234,11 @@ input, select, button {
   font-weight: 700;
 }
 
-.header {
+.header.header--home {
   background: url("../images/headers/gallery-images/success.jpg");
+}
+.header.header--courses {
+  background: url("../images/headers/students.jpg");
 }
 .header .header__slide-timer {
   height: 5px;
@@ -262,25 +294,29 @@ input, select, button {
   background: #ffffff url("../images/icons/arrow-down.svg") no-repeat 10px;
   background-position: 95% center;
   background-size: 16px;
-  padding: 20px;
+  padding: 18px;
+  font-size: 16px;
 }
 .header .form-wrapper .form .form__search-input {
   position: relative;
   height: 100%;
 }
 .header .form-wrapper .form .form__search-input .search-input {
-  width: calc(100% - 40px);
-  padding: 20px;
+  width: calc(100% - 36px);
+  padding: 18px;
+  font-size: 16px;
 }
 .header .form-wrapper .form .form__search-input button {
   position: absolute;
-  border-left: 1px solid #F5F5F5;
+  border-left: 1px solid #cfcfcf;
   top: 50%;
   transform: translateY(-50%);
   right: 0;
   align-items: center;
   font-size: 16px;
   padding: 10px 20px;
+  background: transparent;
+  cursor: pointer;
 }
 .header .form-wrapper .form .form__search-input button img {
   width: 16px;
@@ -317,6 +353,26 @@ input, select, button {
 .events-section .event .event__content .event-content {
   margin: 5px 0;
 }
+@media only screen and (max-width: 1269px) {
+  .events-section .event .event__date, .events-section .event .event__content {
+    width: initial;
+    grid-column: 1/3;
+  }
+  .events-section .event .event__date {
+    flex-flow: row;
+    justify-content: flex-start;
+    padding-left: 20px;
+  }
+  .events-section .event .event__date .day {
+    margin-right: 10px;
+    font-size: 2em;
+  }
+}
+@media only screen and (max-width: 900px) {
+  .events-section section {
+    grid-template-columns: 1fr;
+  }
+}
 
 .course-wrapper {
   height: 400px;
@@ -343,23 +399,28 @@ input, select, button {
   transition: 0.3s cubic-bezier(0.58, 0.01, 0.41, 0.99);
 }
 .course-wrapper .course__contents .expand-collapse {
-  height: 50px;
-  width: 50px;
+  height: 40px;
+  width: 40px;
   border: 2px solid #ffffff;
   border-radius: 50%;
   position: relative;
+  margin: auto;
 }
 .course-wrapper .course__contents .expand-collapse div {
   position: absolute;
   background: #ffffff;
 }
 .course-wrapper .course__contents .expand-collapse .plus {
-  height: 80%;
-  width: 5px;
+  height: 70%;
+  width: 3px;
 }
 .course-wrapper .course__contents .expand-collapse .minus {
-  width: 80%;
-  height: 5px;
+  width: 70%;
+  height: 3px;
+}
+.course-wrapper .course__contents .course__study-levels-wrapper {
+  gap: 10px 20px;
+  margin-bottom: 10px;
 }
 .course-wrapper .course__contents .course__study-levels-wrapper div {
   margin: 5px 0;
@@ -384,7 +445,31 @@ input, select, button {
     display: none;
   }
 }
+@media only screen and (max-width: 1500px) {
+  .course-wrapper .course__contents {
+    text-align: center;
+    margin-top: 0;
+  }
+  .course-wrapper .course__contents .course__study-levels-wrapper div {
+    opacity: 1;
+  }
+  .course-wrapper .course__bg-overlay {
+    background: rgba(133, 29, 224, 0.95);
+  }
+}
 
+@media only screen and (max-width: 930px) {
+  .courses-wrapper {
+    grid-template-columns: 1fr !important;
+  }
+  .courses-wrapper .course__study-levels-wrapper {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .courses-wrapper .grid-span {
+    grid-column: 1;
+  }
+}
 .testimonials .testimonial-wrapper {
   background: #57078C;
   padding: 50px;
@@ -397,13 +482,51 @@ input, select, button {
   margin-top: -150px;
 }
 .testimonials .testimonial-wrapper .testimonial__content {
-  max-width: 780px;
-  margin: 0px auto;
+  max-width: 642px;
+  margin: 0 auto;
 }
 
 footer {
-  background: #57078C;
-  padding: 20px;
+  background: #0A2740;
+  padding-bottom: 30px;
+}
+footer .contact-info p {
+  margin: 0;
+  padding: 0;
+}
+footer .footer__links .study h3, footer .footer__links .search h3 {
+  border-bottom: 1px solid #ffffff;
+  padding: 0 0 10px;
+}
+footer .footer__links .study .footer__nav ul, footer .footer__links .search .footer__nav ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+footer .footer__links .study .footer__nav ul a, footer .footer__links .search .footer__nav ul a {
+  color: #ffffff;
+  padding: 3px 0;
+  display: inline-block;
+}
+footer .footer__subscribe-form {
+  grid-column: 1/3;
+}
+footer .footer__subscribe-form p, footer .footer__subscribe-form h3 {
+  margin: 1px 0;
+}
+footer .footer__subscribe-form .input-field {
+  margin-top: 14px;
+}
+footer .footer__subscribe-form .input-field input[name=email] {
+  padding: 18px;
+  margin-right: 10px;
+  font-size: 16px;
+  width: calc(100% - 184px);
+}
+@media only screen and (max-width: 1090px) {
+  footer .footer__contact-info, footer .footer__links {
+    grid-column: 1/3;
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
