--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -13,23 +13,6 @@
         align-items: center;
     }
 
-    .nav__logo-section {
-
-        img, .department {
-            display: inline-block;
-            margin: 0;
-        }
-
-        img {
-            width: 100px;
-            margin-right: 20px;
-        }
-
-        .department {
-            font-size: 1.05em;
-        }
-    }
-
     .list {
         list-style: none;
         padding: 0;
@@ -45,7 +28,9 @@
 
 // Header styling
 .header {
-    background: url('../images/headers/gallery-images/success.jpg');
+
+    &.header--home { background: url('../images/headers/gallery-images/success.jpg'); }
+    &.header--courses { background: url('../images/headers/students.jpg'); }
 
     .header__slide-timer {
         height: 5px;
@@ -108,7 +93,8 @@
                 background: $white url('../images/icons/arrow-down.svg') no-repeat 10px;
                 background-position: 95% center;
                 background-size: 16px;
-                padding: 20px;
+                padding: 18px;
+                font-size: 16px;
             }
 
             .form__search-input {
@@ -116,19 +102,22 @@
                 height: 100%;
 
                 .search-input {
-                    width: calc(100% - 40px);
-                    padding: 20px;
+                    width: calc(100% - 36px);
+                    padding: 18px;
+                    font-size: 16px;
                 }
                 
                 button {
                     position: absolute;
-                    border-left: 1px solid $gray;
+                    border-left: 1px solid darken($gray, 15%);
                     top: 50%;
                     transform: translateY(-50%);
                     right: 0;
                     align-items: center;
                     font-size: 16px;
                     padding: 10px 20px;
+                    background: transparent;
+                    cursor: pointer;
 
                     img {
                         width: 16px;
@@ -179,9 +168,31 @@
                 margin: 5px 0;
             } 
         }
+
+        @include maxWidth(1269px) {
+            .event__date, .event__content {
+                width: initial;
+                grid-column: 1 / 3;
+            }
+
+            .event__date {
+                flex-flow: row;
+                justify-content: flex-start;
+                padding-left: 20px;
+
+                .day {
+                    margin-right: 10px;
+                    font-size: 2em;
+                }
+            }
+        }
     }
 
-
+    @include maxWidth(900px) {
+        section {
+            grid-template-columns: 1fr;
+        }
+    }
 }
 
 // Courses styling
@@ -212,33 +223,38 @@
         margin-top: 368px;
         transition: $transitioning;
 
-        $circleSize: 50px;
+        $circleSize: 40px;
         .expand-collapse {
             height: $circleSize;
             width: $circleSize;
             border: 2px solid $white;
             border-radius: 50%;
             position: relative;
+            margin: auto;
 
             div {
                 position: absolute;
                 background: $white;
             }
 
-            $plusMinusWidth: 80%;
+            $plusMinusHeight: 70%;
+            $plusMinusWidth: 3px;
+
             .plus {
-                height: $plusMinusWidth;
-                width: 5px;
+                height: $plusMinusHeight;
+                width: $plusMinusWidth;
             }
 
             .minus {
-                width: $plusMinusWidth;
-                height: 5px;
+                width: $plusMinusHeight;
+                height: $plusMinusWidth;
             }
 
         }
 
         .course__study-levels-wrapper {
+            gap: 10px 20px;
+            margin-bottom: 10px;
 
             div {
                 margin: 5px 0;
@@ -254,9 +270,11 @@
     }
 
     @include minWidth(1500px) {
+
         &:hover {
             .course__contents {
                 margin-top: 0;
+
 
                 .course__study-levels-wrapper div {
                     opacity: 1;
@@ -270,6 +288,38 @@
 
         .expand-collapse {
             display: none;
+        }
+    }
+    @include maxWidth(1500px) {
+        .course__contents {
+            text-align: center;
+            //margin-top: 300px;
+            margin-top: 0;
+
+            .course__study-levels-wrapper div {
+                opacity: 1;
+            }
+        }
+
+        .course__bg-overlay {
+            background: transparentize($main-color, .05);
+        }
+
+
+    }
+}
+
+@include maxWidth(930px) {
+    .courses-wrapper {
+        grid-template-columns: 1fr !important;
+
+        .course__study-levels-wrapper {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+        }
+
+        .grid-span {
+            grid-column: 1;
         }
     }
 }
@@ -289,13 +339,71 @@
         }
 
         .testimonial__content {
-            max-width: 780px;
-            margin: 0px auto;
+            max-width: 642px;
+            margin: 0 auto;
         }
     }
 }
 
 footer {
-    background: $secondary-color;
-    padding: 20px;
+    background: $fourth-color;
+    padding-bottom: 30px;
+
+    .contact-info {
+
+        p {
+            margin: 0;
+            padding: 0;
+        }
+    }
+
+    .footer__links {
+
+        .study, .search {
+            h3 {
+                border-bottom: 1px solid $white;
+                padding: 0 0 10px;
+            }
+
+            .footer__nav {
+                ul {
+                    margin: 0;
+                    padding: 0;
+                    list-style: none;
+
+                    a {
+                        color: $white;
+                        padding: 3px 0;
+                        display: inline-block;
+                    }
+                }
+            }
+        }
+    }
+
+    .footer__subscribe-form {
+        grid-column: 1 / 3;
+
+        p, h3 {
+            margin: 1px 0;
+        }
+
+        .input-field {
+            margin-top: 14px;
+
+            input[name=email] {
+                padding: 18px;
+                margin-right: 10px;
+                font-size: 16px;
+                width: calc(100% - 184px);
+            }
+        }
+
+    }
+
+    @include maxWidth(1090px) {
+        .footer__contact-info, .footer__links {
+            grid-column: 1 / 3;
+        }
+    }
 }
