--- a/css/variables.css
+++ b/css/variables.css
@@ -45,6 +45,14 @@ input, select, button {
   border-radius: 0px;
 }
 
+.mt-10 {
+  margin-top: 10px;
+}
+
+.mt-30 {
+  margin-top: 10px;
+}
+
 .mt-60 {
   margin-top: 60px;
 }
@@ -59,6 +67,10 @@ input, select, button {
 
 .white-bg {
   background: #ffffff;
+}
+
+.block {
+  display: block;
 }
 
 .grid {
@@ -129,7 +141,8 @@ input, select, button {
   border-radius: 3px;
   justify-content: space-around;
   width: 100px;
-  margin: auto;
+  margin: 10px auto 0;
+  background: rgba(10, 39, 64, 0.5);
 }
 .dots .dot {
   width: 10px;
@@ -145,6 +158,18 @@ input, select, button {
 }
 .dots .dot:hover {
   opacity: 1;
+}
+.dots.inverted {
+  background: transparent;
+}
+.dots.inverted .dot {
+  background: #0A2740;
+}
+.dots.inverted--light {
+  background: transparent;
+}
+.dots.inverted--light .dot {
+  background: #ffffff;
 }
 
 .header {
