--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -204,6 +204,11 @@
 }
 
 // Courses styling
+.courses .overview {
+    width: 90%;
+    margin-bottom: 40px;
+}
+
 .course-wrapper {
     height: 400px;
     padding: 20px;
