--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -35,6 +35,7 @@
 
     &.header--home { background: url('../images/headers/gallery-images/success.jpg'); }
     &.header--courses { background: url('../images/headers/students.jpg'); }
+    &.header--web-development { background: url('../images/thumbnails/web-development.jpg'); }
 
     .header__slide-timer {
         height: 5px;
