--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -94,6 +94,10 @@ input, select, button {
     background: $white;
 }
 
+.gray-bg {
+    background: $gray;
+}
+
 // Display
 .block {
     display: block;
