--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -85,6 +85,10 @@ input, select, button {
     padding-top: 30px;
 }
 
+.p-60 {
+    padding: 60px;
+}
+
 // Colours
 .white-color {
     color: $white;
