changed the tag colours

--- a/css/styles.css
+++ b/css/styles.css
@@ -538,7 +538,7 @@ input, select, button {
   padding: 10px 15px;
   display: inline-block;
   margin: 5px 10px 0px 0px;
-  background: #851DE0;
+  background: #57078C;
 }
 
 .testimonials .testimonial-wrapper {
