--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -346,7 +346,7 @@
         padding: 10px 15px;
         display: inline-block;
         margin: 5px 10px 0px 0px;
-        background: $main-color;
+        background: $secondary-color;
     }
 }
 
